--- a/.render.yaml
+++ b/.render.yaml
@@ -2,5 +2,5 @@ services:
   - type: web
     name: youtube-downloader
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: ./render-build.sh
     startCommand: gunicorn app:app
