--- a/.render.yaml
+++ b/.render.yaml
@@ -2,5 +2,7 @@ services:
   - type: web
     name: youtube-downloader
     env: python
-    buildCommand: ./render-build.sh
+    buildCommand: |
+      apt-get update && apt-get install -y ffmpeg
+      pip install -r requirements.txt
     startCommand: gunicorn app:app
